install( DIRECTORY config DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )
install( DIRECTORY grid DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )
install( DIRECTORY namelist DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )
install( DIRECTORY post DESTINATION share PATTERN "CMakeLists.txt" EXCLUDE )
